--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -9,7 +9,7 @@
         <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
 
         <!--=============== CSS ===============-->
-        <link href="{{ asset('css/style.css') }}" rel="stylesheet"/>
+        <link href="{{ asset('css/style2.css') }}" rel="stylesheet"/>
         <title>Login</title>
 {% endblock %}
 
@@ -20,7 +20,7 @@
 <main>
         <div class="container_form">
             <div class="login_content">
-                <img src="{{ asset('img/bg-login.png')}}" alt="login_img" class="login_img">
+                <img src="{{ asset('img/man.png')}}" alt="login_img" class="login_img">
                 <div class="login_form" id="login-form">
                     {{ form_start(registrationForm) }}
 
