--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -18,7 +18,7 @@
 <main>
         <div class="container">
             <div class="login_content">
-                <img src="{{ asset('img/bg-login.png')}}" alt="login_img" class="login_img">
+                <img src="{{ asset('img/man.png')}}" alt="login_img" class="login_img">
                 <form method="post" class="login_form" id="login-form">
 
                     
