--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -17,6 +17,10 @@
         <div class="col-xs1">Name :</div>
         <div class="col-xs3">{{ app.user.name }}</div>
 
+        <a href="{{ path('app_user_edit', {'id': app.user.id}) }}">edit</a>
+
+
+
 
 
 
