--- a/templates/accueil/index.html.twig
+++ b/templates/accueil/index.html.twig
@@ -5,6 +5,14 @@
 {% block body %}
 {% block content %}
 
+<div id="back_accueil">
+<div class="presentation">
+<h1>Népal - Concert</h1>
+<h1 class="trinity">Cheddar</h1>
+<h1>MARDI 20 DECEMBRE 2022</h1>
+<h1>A BAYONNE</h1>
+</div>
+</div>
 <!--Première section-->
 <section class="section_theatre">
   <h1 class="titre_theatre">THEATRES</h1>
@@ -12,15 +20,18 @@
   <div class="titanic_flex">
     <div class="titanic1">
       <img src="{{ asset('img/titanic.png') }}" class="titanic_img">
-      <input type="submit" value="Voir Info" class="bouton_titanic">
+      <input type="submit" value="envoyer" class="bouton_titanic">
     </div>
-    <p class="text_theatre">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin pharetra posuere elit at ullamcorper. Aenean sit amet neque et urna finibus facilisis eget at velit. Curabitur imperdiet risus ullamcorper odio luctus, condimentum mattis tortor iaculis. Donec felis lectus, rutrum id eros eu, eleifend dignissim elit. Integer pellentesque eget orci a egestas. In placerat malesuada tempus. Etiam porttitor metus a arcu rhoncus, vitae imperdiet justo egestas.
+    <p class="text_theatre">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin
+      pharetra posuere elit at ullamcorper. Aenean sit amet neque et urna finibus facilisis
+      eget at velit. Curabitur imperdiet risus ullamcorper odio luctus, condimentum mattis
+      tortor iaculis. Donec felis lectus, rutrum id eros eu, eleifend dignissim elit. Integer
+      pellentesque eget orci a egestas. In placerat malesuada tempus. Etiam porttitor metus a
+      arcu rhoncus, vitae imperdiet justo egestas.
 Donec porttitor mi at iaculis dictum.
-
-Nam lectus dolor, malesuada et rhoncus et, aliquam id erat. In hac habitasse platea dictumst. Ut dapibus fringilla vestibulum. Praesent euismod pharetra arcu sit amet fringilla. Sed lobortis commodo dapibus. Ut porttitor a tellus eu lacinia. Proin ut semper tortor. Cras ultricies hendrerit velit, id interdum nisi porttitor non. Ut augue turpis, vehicula et euismod in, euismod sit amet dolor.
 </p>
 </div>
-<a href="manif" class="theatre_lien">Voir les autres pièces</a>
+<a href="#" class="theatre_lien">Voir les autres pièces</a>
 </section>
 
 <!--Deuxième section-->
@@ -28,36 +39,42 @@ Nam lectus dolor, malesuada et rhoncus et, aliquam id erat. In hac habitasse pla
 <h1 class="titre_concert">Concerts</h1>
   <div id="barre"></div>
 <div class="concert_flex">
-<p class="text_concert">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin pharetra posuere elit at ullamcorper. Aenean sit amet neque et urna finibus facilisis eget at velit. Curabitur imperdiet risus ullamcorper odio luctus, condimentum mattis tortor iaculis. Donec felis lectus, rutrum id eros eu, eleifend dignissim elit. Integer pellentesque eget orci a egestas. In placerat malesuada tempus. Etiam porttitor metus a arcu rhoncus, vitae imperdiet justo egestas.
+<p class="text_concert">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin
+  pharetra posuere elit at ullamcorper. Aenean sit amet neque et urna finibus facilisis
+  eget at velit. Curabitur imperdiet risus ullamcorper odio luctus, condimentum mattis
+  tortor iaculis. Donec felis lectus, rutrum id eros eu, eleifend dignissim elit. Integer
+  pellentesque eget orci a egestas. In placerat malesuada tempus. Etiam porttitor metus a
+  arcu rhoncus, vitae imperdiet justo egestas.
 Donec porttitor mi at iaculis dictum.
-
-Nam lectus dolor, malesuada et rhoncus et, aliquam id erat. In hac habitasse platea dictumst. Ut dapibus fringilla vestibulum. Praesent euismod pharetra arcu sit amet fringilla. Sed lobortis commodo dapibus. Ut porttitor a tellus eu lacinia. Proin ut semper tortor. Cras ultricies hendrerit velit, id interdum nisi porttitor non. Ut augue turpis, vehicula et euismod in, euismod sit amet dolor.
 </p>
 
 <div class="concert_img">
 <img src="{{ asset('img/titanic.png') }}" class="titanic_img">
-<input type="submit" value="Voir Info" class="bouton_titanic">
+<input type="submit" value="envoyer" class="bouton_concert">
 </div>
 </div>
-<a href="manif" class="concert_lien">Voir les autres pièces</a>
+<a href="#" class="concert_lien">Voir les autres pièces</a>
 </section>
 
 <!--Troisème section*-->
 <section class="section_cinema">
-<h1 class="titre_theatre">CINEMA</h1>
+<h1 class="titre_cinema">Cinema</h1>
   <div id="barre"></div>
 <div class="titanic_flex">
 <div class="titanic1">
 <img src="{{ asset('img/titanic.png') }}" class="titanic_img">
-<input type="submit" value="Voir Info" class="bouton_titanic">
+<input type="submit" value="envoyer" class="bouton_titanic">
 </div>
-<p class="text_theatre">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin pharetra posuere elit at ullamcorper. Aenean sit amet neque et urna finibus facilisis eget at velit. Curabitur imperdiet risus ullamcorper odio luctus, condimentum mattis tortor iaculis. Donec felis lectus, rutrum id eros eu, eleifend dignissim elit. Integer pellentesque eget orci a egestas. In placerat malesuada tempus. Etiam porttitor metus a arcu rhoncus, vitae imperdiet justo egestas.
+<p class="text_theatre">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin
+  pharetra posuere elit at ullamcorper. Aenean sit amet neque et urna finibus facilisis
+  eget at velit. Curabitur imperdiet risus ullamcorper odio luctus, condimentum mattis
+  tortor iaculis. Donec felis lectus, rutrum id eros eu, eleifend dignissim elit. Integer
+  pellentesque eget orci a egestas. In placerat malesuada tempus. Etiam porttitor metus a
+  arcu rhoncus, vitae imperdiet justo egestas.
 Donec porttitor mi at iaculis dictum.
-
-Nam lectus dolor, malesuada et rhoncus et, aliquam id erat. In hac habitasse platea dictumst. Ut dapibus fringilla vestibulum. Praesent euismod pharetra arcu sit amet fringilla. Sed lobortis commodo dapibus. Ut porttitor a tellus eu lacinia. Proin ut semper tortor. Cras ultricies hendrerit velit, id interdum nisi porttitor non. Ut augue turpis, vehicula et euismod in, euismod sit amet dolor.
 </p>
 </div>
-<a href="manif" class="theatre_lien">Voir les autres pièces</a>
+<a href="#" class="theatre_lien">Voir les autres pièces</a>
 </section>
 
 <!--Quatrième section-->
@@ -65,18 +82,21 @@ Nam lectus dolor, malesuada et rhoncus et, aliquam id erat. In hac habitasse pla
 <h1 class="titre_spectacle">Spectacle</h1>
     <div id="barre"></div>
 <div class="concert_flex">
-<p class="text_concert">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin pharetra posuere elit at ullamcorper. Aenean sit amet neque et urna finibus facilisis eget at velit. Curabitur imperdiet risus ullamcorper odio luctus, condimentum mattis tortor iaculis. Donec felis lectus, rutrum id eros eu, eleifend dignissim elit. Integer pellentesque eget orci a egestas. In placerat malesuada tempus. Etiam porttitor metus a arcu rhoncus, vitae imperdiet justo egestas.
+<p class="text_concert">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin
+  pharetra posuere elit at ullamcorper. Aenean sit amet neque et urna finibus facilisis
+  eget at velit. Curabitur imperdiet risus ullamcorper odio luctus, condimentum mattis
+  tortor iaculis. Donec felis lectus, rutrum id eros eu, eleifend dignissim elit. Integer
+  pellentesque eget orci a egestas. In placerat malesuada tempus. Etiam porttitor metus a
+  arcu rhoncus, vitae imperdiet justo egestas.
 Donec porttitor mi at iaculis dictum.
-
-Nam lectus dolor, malesuada et rhoncus et, aliquam id erat. In hac habitasse platea dictumst. Ut dapibus fringilla vestibulum. Praesent euismod pharetra arcu sit amet fringilla. Sed lobortis commodo dapibus. Ut porttitor a tellus eu lacinia. Proin ut semper tortor. Cras ultricies hendrerit velit, id interdum nisi porttitor non. Ut augue turpis, vehicula et euismod in, euismod sit amet dolor.
 </p>
 
 <div class="concert_img">
 <img src="{{ asset('img/titanic.png') }}" class="titanic_img">
-<input type="submit" value="Voir Info" class="bouton_titanic">
+<input type="submit" value="envoyer" class="bouton_concert">
 </div>
 </div>
-<a href="manif" class="concert_lien">Voir les autres pièces</a>
+<a href="#" class="concert_lien">Voir les autres pièces</a>
 </section>
 <footer class="footer">
   <div class="footer__addr">
