--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,8 +2,12 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
+        <title>{% block title %}SAE 301{% endblock %}</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        {# Run `composer require symfony/webpack-encore-bundle` to start using Symfony UX #}
         <link href="{{ asset('css/style.css') }}" rel="stylesheet"/>
         {% block javascript %}
         <script type="text/javascript" src="{{ asset('js/scriptgeneral.js') }}" defer></script>
@@ -12,32 +16,56 @@
     </head>
 <body>
     <header>
-<nav>
-<ul class="menu">
-        <li><a href="{{ path('app_accueil') }}">ACCUEIL</a></li>
-        <li><a href="{{ path('app_salle_index') }}">SALLES</a></li> 
-        <li><a href="{{ path('app_manif_index') }}">MANIFESTATIONS</a></li> 
-        <li><a href="{{ path('app_panier') }}">PANIER:<span id='panier'>0</span></a></li> 
-        {% if app.user %}
-        <li><a href="{{ path('app_user') }}">MON COMPTE</a></li>
-        <li><a href="{{ path('app_logout') }}">DECONNEXION</a></li>
-        {% else %}
-        <li><a href="{{ path('app_login') }}">CONNEXION</a></li> 
-        <li><a href="{{ path('app_register') }}">INSCRIPTION</a></li> 
+<div id="menu_desktop">
+        <nav>
+            <ul class="menu">
+                <li><a href="{{ path('app_accueil') }}">ACCUEIL</a></li>
+                <li><a href="{{ path('app_salle_index') }}">SALLES</a></li>
+                <li><a href="{{ path('app_manif_index') }}">MANIFESTATIONS</a></li>
+                <li><a href="{{ path('app_panier') }}"><img src="{{ asset('img/panier1.png') }}" class="panier_img"><span id='panier'>0</span></a></li>
+                {% if app.user %}
+                    <li><a href="{{ path('app_user_index') }}"><img src="{{ asset('img/account1.png') }}" class="account_img"></a></li>
+                    <li><a href="{{ path('app_logout') }}">DECONNEXION</a></li>
+                {% else %}
+                    <li><a href="{{ path('app_login') }}"><img src="{{ asset('img/account1.png') }}" class="account_img"></a></li>
 
-             {% endif %}        
-        <li><a href="admin">ADMIN</a></li> 
-        </ul>
+                {% endif %}
+            </ul>
+            <a href="{{ path('app_accueil') }}"><img src="{{ asset('img/logo1.png') }}" class="logo_desktop"></a>
         </nav>
-        </header>
-      <div id="back_accueil">
-<div class="presentation">
-<h1>Népal - Concert</h1>
-<h1 class="trinity">Cheddar</h1>
-<h1>MARDI 20 DECEMBRE 2022</h1>
-<h1>A BAYONNE</h1>
-</div>
-      </div>
+        </div>
+        <div id="menu_phone">
+            <a href="{{ path('app_accueil') }}"><img src="{{ asset('img/logo1.png') }}" class="logo_phone"></a>
+        <input type="checkbox" id="ham-menu">
+        <label for="ham-menu">
+            <div class="hide-des">
+                <span class="menu-line"></span>
+                <span class="menu-line"></span>
+                <span class="menu-line"></span>
+                <span class="menu-line"></span>
+                <span class="menu-line"></span>
+                <span class="menu-line"></span>
+            </div>
+
+        </label>
+        <div class="full-page-green"></div>
+        <div class="ham-menu">
+            <ul class="centre-text bold-text">
+                <li><a href="{{ path('app_accueil') }}">ACCUEIL</a></li>
+                <li><a href="{{ path('app_salle_index') }}">SALLES</a></li>
+                <li><a href="{{ path('app_manif_index') }}">MANIFESTATION</a></li>
+                <li><a href="{{ path('app_panier') }}">PANIER</a></li>
+                {% if app.user %}
+                    <li><a href="#"></a>MON COMPTE</li>
+                    <li><a href="{{ path('app_logout') }}">DECONNEXION</a></li>
+                {% else %}
+                    <li><a href="{{ path('app_login') }}">CONNEXION</a></li>
+                {% endif %}
+                <li><a href=">admin">ADMIN</a></li>
+            </ul>
+        </div>
+        </div>
+    </header>
 
 
 
