--- a/templates/user.html.twig
+++ b/templates/user.html.twig
@@ -15,12 +15,11 @@
 <body class="layout with-sidenav">
 <header>
     <nav class="navbar">
-        <a href="{{ path('app_accueil') }}" class="navbar-brand">Le Pestacle</a>
+        <a href="{{ path('app_accueil') }}" class="navbar-brand">LE PESTACLE</a>
         <div class="navbar-menu ml-auto">
-            <a class="navbar-link" href="{{ path('app_accueil') }}">Accueil</a>
-            <a class="navbar-link" href="#">Link 2</a>
-            <a class="navbar-link" href="#">Link 3</a>
-            <a class="navbar-link" href="#">Link 4</a>
+            <a class="navbar-link" href="{{ path('app_accueil') }}">ACCUEIL</a>
+            <a class="navbar-link" href="{{ path('app_logout') }}"> DECONNEXION</a>
+
         </div>
     </nav>
 </header>
@@ -31,8 +30,8 @@
         </button>
         <img class="logo dropshadow-1" src="your_img_path" alt="Logo"/>
     </div>
-    <a href="{{ path('app_user') }}" class="sidenav-link active">Mon profil</a>
-    <a href="{{ path('app_user_achat') }}" class="sidenav-link">Mes Achats</a>
+    <a href="{{ path('app_user_index') }}" class="sidenav-link active">MON PROFIL</a>
+    <a href="{{ path('app_user_achat') }}" class="sidenav-link">MES ACHATS</a>
 </div>
 <main>
     <button data-target="example-sidenav" class="btn press amaranth dark-1 sidenav-trigger hide-md-up">
