--- a/templates/panier/index.html.twig
+++ b/templates/panier/index.html.twig
@@ -47,7 +47,8 @@
                 <br>
     <input type="hidden" name="liste" id="liste">
 
-            <a href="{{ path('app_data_user_new') }}" class="panier_bouton">Suivant</a>
+            <a href="{{ path('app_data_user_new') }}" class="panier_bouton">Payer en CB</a>
+            <a href="{{ path('app_data_user_paypal_new') }}" class="panier_bouton">Payer en Paypal</a>
 
 
         </section>
