--- a/templates/accueil/index.html.twig
+++ b/templates/accueil/index.html.twig
@@ -1,6 +1,5 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello AccueilController!{% endblock %}
 
 {% block body %}
 {% block content %}
@@ -19,7 +18,7 @@
   <div id="barre"></div>
   <div class="titanic_flex">
     <div class="titanic1">
-      <img src="{{ asset('img/titanic.png') }}" class="titanic_img">
+      <img src="{{ asset('img/titanic.png') }}" class="titanic_img" alt="img_accueil">
       <input type="submit" value="envoyer" class="bouton_titanic">
     </div>
     <p class="text_theatre">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin
@@ -49,7 +48,7 @@ Donec porttitor mi at iaculis dictum.
 </p>
 
 <div class="concert_img">
-<img src="{{ asset('img/titanic.png') }}" class="titanic_img">
+<img src="{{ asset('img/titanic.png') }}" class="titanic_img" alt="img_accueil">
 <input type="submit" value="envoyer" class="bouton_concert">
 </div>
 </div>
@@ -62,7 +61,7 @@ Donec porttitor mi at iaculis dictum.
   <div id="barre"></div>
 <div class="titanic_flex">
 <div class="titanic1">
-<img src="{{ asset('img/titanic.png') }}" class="titanic_img">
+<img src="{{ asset('img/titanic.png') }}" class="titanic_img" alt="img_accueil">
 <input type="submit" value="envoyer" class="bouton_titanic">
 </div>
 <p class="text_theatre">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin
@@ -92,7 +91,7 @@ Donec porttitor mi at iaculis dictum.
 </p>
 
 <div class="concert_img">
-<img src="{{ asset('img/titanic.png') }}" class="titanic_img">
+<img src="{{ asset('img/titanic.png') }}" class="titanic_img" alt="img_accueil">
 <input type="submit" value="envoyer" class="bouton_concert">
 </div>
 </div>
