--- a/public/css/style.css
+++ b/public/css/style.css
@@ -49,6 +49,16 @@ nav a {
   text-decoration: none;
 }
 
+.menu_panier {
+    position: relative;
+    bottom: 8px;
+}
+
+.menu_compte {
+    position: relative;
+    bottom: 8px;
+}
+
 nav .menu {
   display: flex;
   position: fixed;
@@ -70,6 +80,15 @@ nav .menu {
   font-size: 1rem;
   color: white;
   font-weight: bold;
+}
+
+
+
+.menu > li > a:focus, .menu > li > a:hover {
+    background: none;
+    text-decoration : none;
+    padding : 0 0 4px 0;
+    border-bottom : 2px solid white;
 }
 
 a:hover {
@@ -129,6 +148,22 @@ label[for="ham-menu"] {
   padding: 20px;
   height: 50%;
 }
+
+.ham-menu a:hover {
+    -webkit-mask-image: linear-gradient(-75deg, rgba(0,0,0,.6) 30%, #000 50%, rgba(0,0,0,.6) 70%);
+    -webkit-mask-size: 200%;
+    animation: shine 2s infinite;
+}
+
+@-webkit-keyframes shine {
+    from {
+        -webkit-mask-position: 150%;
+    }
+
+    to {
+        -webkit-mask-position: -50%;
+    }
+}
 .ham-menu > ul > li > a{
   font-size: 2.2rem;
   white-space: nowrap;
@@ -139,8 +174,8 @@ label[for="ham-menu"] {
   text-decoration: none;
 }
 #ham-menu:checked + label {
-  background-color: transparent;
-  border-color: var(--dark-green);
+    background-color: transparent;
+    border-color: white;
 }
 #ham-menu:checked ~ div.ham-menu {
   transform: translate(0px);
@@ -185,7 +220,24 @@ label[for="ham-menu"] {
 }
 
 select#search_Salle{
-  width: 200px;
+    width: 50%;
+    padding: 8px;
+    border: 1px solid #ccc;
+    border-radius: 7px;
+    box-sizing: border-box;
+    margin-top: 18px;
+    resize: vertical;
+    margin-left: 25%;
+}
+
+button#search_Chercher{
+    background-color: #E35A50;
+    color: white;
+    padding: 5px 40px;
+    border: none;
+    margin-top: 20px;
+    border-radius: 7px;
+    margin-left: 40%;
 }
 
 [for="ham-menu"] > div > span:nth-child(4),
@@ -198,7 +250,7 @@ select#search_Salle{
   transform-origin: left center;
 }
 #ham-menu:checked + label span {
-  background-color: var(--dark-green);
+  background-color: white;
 }
 #ham-menu:checked + label span:nth-child(2),
 #ham-menu:checked + label span:nth-child(5) {
@@ -459,6 +511,11 @@ p {
       margin-left: 33%!important;
   }
 
+  button#search_Chercher{
+      margin: auto;
+  }
+
+
   .presentation {
       padding-top: 30% !important;
   }
@@ -636,6 +693,7 @@ form {
   box-shadow: 0px 8px 12px -4px rgb(0 0 0 / 21%);
   position: relative;
   top: 90px;
+    border-radius: 6px;
 }
 
 input[type=search] {
@@ -840,7 +898,14 @@ input[type=search] {
   backdrop-filter: blur(4px);
 }
 
-
+.titre_section_manif {
+    font-family: sans-serif;
+    font-size: 35px;
+    position: relative;
+    top: 115px;
+    padding: 23px 72px 0px 10%;
+    color: white;
+}
 /*card-container pour la page manifestation*/
 
 #card_container{
@@ -876,26 +941,26 @@ input[type=search] {
 }
 
 .event_card .fadedbox {
-  justify-content: space-evenly;
-  background-color: #000000d9;
-  position: absolute;
-  display: flex;
-  flex-wrap: wrap;
-  top: 0;
-  left: 0;
-  color: #fff;
-  -moz-transition: all 300ms ease-out;
-  -o-transition: all 300ms ease-out;
-  -ms-transition: all 300ms ease-out;
-  transition: all 300ms ease-out;
-  width: fit-content;
-  height: fit-content;
-  padding: 187px 8px;
-  opacity: 0;
+    justify-content: space-evenly;
+    background-color: #000000d9;
+    position: absolute;
+    display: flex;
+    flex-wrap: wrap;
+    top: 0;
+    left: 0;
+    color: #fff;
+    -moz-transition: all 300ms ease-out;
+    -o-transition: all 300ms ease-out;
+    -ms-transition: all 300ms ease-out;
+    transition: all 300ms ease-out;
+    width: fit-content;
+    height: fit-content;
+    padding: 170px 8px;
+    opacity: 0;
 }
 
 .event_card:hover .fadedbox {
-  opacity: 0.8;
+  opacity: 20;
 }
 
 .info_card {
@@ -904,19 +969,40 @@ input[type=search] {
   justify-content: space-evenly;
 }
 
+.voir_info{
+    position: relative;
+    bottom: 64px;
+    color: white;
+    padding: 14px;
+    font-size: 15px;
+    background-color: #E35A50;
+    border-radius: 6px;
+    text-decoration: none;
+}
+
+.voir_info:hover {
+    color: black;
+    background-color: white;
+}
+
 .titre_card{
-  font-weight: bolder;
-  font-family: sans-serif;
-  font-size: 25px;
-  margin-bottom: 30px;
-  position: relative;
-  bottom: 57px;
-  margin-right: 3%;
-  margin-left: 3%;
+    font-weight: bolder;
+    font-family: sans-serif;
+    font-size: 25px;
+    position: relative;
+    bottom: 57px;
+    margin-right: 3%;
+    margin-left: 3%;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
 }
 
 .genre_card {
   font-size: 20px;
+    position: relative;
+    bottom: 36px;
   margin-right: 30%;
   background-color: #E35A50;
   padding: 5px;
@@ -925,26 +1011,27 @@ input[type=search] {
 
 .prix_card {
   font-size: 20px;
+    bottom: 36px;
+    position: relative;
   background-color: #E35A50;
   padding: 5px;
   border-radius: 8px;
 }
 
 .synopsis_card {
-  margin-top: 6%;
   font-size: 18px;
 }
 
 .descript_card {
-  font-size: 16px;
-  margin-right: 3%;
-  margin-left: 3%;
-  text-align: left;
-  top: 30px;
-  display: -webkit-box;
-  -webkit-line-clamp: 5;
-  -webkit-box-orient: vertical;
-  overflow: hidden;
+    font-size: 16px;
+    margin-right: 3%;
+    margin-left: 3%;
+    text-align: left;
+    top: 30px;
+    display: -webkit-box;
+    -webkit-line-clamp: 4;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
 }
 
 .fade_text {
@@ -1230,7 +1317,6 @@ form.form_panier {
   margin-top: 10px;
   border-radius: 100px;
   box-shadow: 0px 8px 12px -4px rgb(0 0 0 / 21%);
-  border: 1px solid white;
   font-size: 15px;
   text-decoration: none;
 }
