--- a/templates/user.html.twig
+++ b/templates/user.html.twig
@@ -2,10 +2,8 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>
-        {% block title %}Welcome!
-        {% endblock %}
-    </title>
+    <title>{% block title %}Le Pestacle {% endblock %}</title>
+
     <link href="{{ asset('css/style2.css') }}" rel="stylesheet"/>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/axentix@0.5.3/dist/css/axentix.min.css"> {% block stylesheets %}{% endblock %}
     {% block javascript %}
@@ -31,7 +29,7 @@
         <img class="logo dropshadow-1" src="your_img_path" alt="Logo"/>
     </div>
     <a href="{{ path('app_user_index') }}" class="sidenav-link active">MON PROFIL</a>
-    <a href="{{ path('app_user_achat') }}" class="sidenav-link">MES ACHATS</a>
+    <a href="#" class="sidenav-link">MES ACHATS</a>
 </div>
 <main>
     <button data-target="example-sidenav" class="btn press amaranth dark-1 sidenav-trigger hide-md-up">
