--- a/templates/accueil/index.html.twig
+++ b/templates/accueil/index.html.twig
@@ -18,7 +18,7 @@
   <div id="barre"></div>
   <div class="titanic_flex">
     <div class="titanic1">
-      <img src="{{ asset('img/titanic.png') }}" class="titanic_img" alt="img_accueil">
+      <img src="{{ asset('img/affiche1.jpg') }}" class="titanic_img" alt="img_accueil">
       <input type="submit" value="envoyer" class="bouton_titanic">
     </div>
     <p class="text_theatre">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin
@@ -48,7 +48,7 @@ Donec porttitor mi at iaculis dictum.
 </p>
 
 <div class="concert_img">
-<img src="{{ asset('img/titanic.png') }}" class="titanic_img" alt="img_accueil">
+<img src="{{ asset('img/affiche7.jpg') }}" class="titanic_img" alt="img_accueil">
 <input type="submit" value="envoyer" class="bouton_concert">
 </div>
 </div>
@@ -57,11 +57,11 @@ Donec porttitor mi at iaculis dictum.
 
 <!--Troisème section*-->
 <section class="section_cinema">
-<h1 class="titre_cinema">Cinema</h1>
+<h1 class="titre_cinema">Exposition</h1>
   <div id="barre"></div>
 <div class="titanic_flex">
 <div class="titanic1">
-<img src="{{ asset('img/titanic.png') }}" class="titanic_img" alt="img_accueil">
+<img src="{{ asset('img/affiche12.jpg') }}" class="titanic_img" alt="img_accueil">
 <input type="submit" value="envoyer" class="bouton_titanic">
 </div>
 <p class="text_theatre">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin
@@ -91,7 +91,7 @@ Donec porttitor mi at iaculis dictum.
 </p>
 
 <div class="concert_img">
-<img src="{{ asset('img/titanic.png') }}" class="titanic_img" alt="img_accueil">
+<img src="{{ asset('img/affiche20.jpg') }}" class="titanic_img" alt="img_accueil">
 <input type="submit" value="envoyer" class="bouton_concert">
 </div>
 </div>
