--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -31,11 +31,11 @@
 
                 {% endif %}
             </ul>
-            <a href="{{ path('app_accueil') }}"><img src="{{ asset('img/logo1.png') }}" class="logo_desktop" alt="img_nav"></a>
+            <a href="{{ path('app_accueil') }}"><img src="{{ asset('img/logo1.webp') }}" class="logo_desktop" alt="img_nav"></a>
         </nav>
         </div>
         <div id="menu_phone">
-            <a href="{{ path('app_accueil') }}"><img src="{{ asset('img/logo1.png') }}" class="logo_phone" alt="img_nav"></a>
+            <a href="{{ path('app_accueil') }}"><img src="{{ asset('img/logo1.webp') }}" class="logo_phone" alt="img_nav"></a>
         <input type="checkbox" id="ham-menu">
         <label for="ham-menu">
             <div class="hide-des">
