--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,6 @@
 body {
   margin: 0px;
-  background-image: url(../img/fond.jpg);
+  background-image: url(../img/fond.avif);
   background-repeat: no-repeat;
   background-size: cover;
   background-position-y: -50px;
